# f1-undercut-sim

./: .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .renderignore  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_IMPLEMENTATION.md  Dockerfile  LICENSE  Makefile  OPENAPI_IMPLEMENTATION.md  README.md  chunk.js  debug_simulation.py  docker-compose.prod.yml  docker-compose.yml  final_zod_test.js  integration_test.js  manual_sim.py  move-docker.ps1  optimistic_sim.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  realistic_sim.py  render.yaml  requirements-render.txt  requirements.txt  requirements.txt.backup  tat -ano  findstr 8000  test_api_clients.py  test_api_multi_lap.py  test_coercion.js  test_final.py  test_form_data.js  test_frontend.html  test_frontend_request.js  (+6 more)
.do/: app.yaml
.github/workflows/: backend.yml  ci-backend.yml  ci-docker.yml  ci-e2e.yml  ci-frontend.yml  ci.yml  frontend.yml
app/: layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  __init__.py  app.py  app_minimal.py  config.py  entrypoint.sh  logging_config.py  middleware.py  model_cache.py  performance.py  pyproject.toml  requirements.txt  standalone_app.py
backend/models/: __init__.py  deg.py  outlap.py  pit.py
backend/services/: __init__.py  fastf1_enrichment.py  jolpica.py  model_params.py  openf1.py  tyre_age.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_api_smoke.py  test_app.py  test_deg.py  test_deg_backoff.py  test_deg_model.py  test_gap_boundary_smoke.py  test_inverse_undercut.py  test_multihorizon.py  test_outlap.py  test_outlap_backoff.py  test_outlap_model.py  test_pit.py  test_pit_model.py  test_tyre_age.py
backend/tests/fixtures/: model_params.py
components/: simulation-chart.tsx
deploy/: standalone_app.py
docker/: README.md
docs/: glossary.md  hybrid-data-implementation.md  modeling.md  multi-lap-undercut.md  perf.md
docs/figs/: backtest_model_quality.csv  backtest_model_quality_summary.csv  backtest_summary.csv  decile_reliability.csv  undercut_gap_sweep.csv
frontend/: .dockerignore  .env.production  .env.vercel  .gitignore  Dockerfile  TYPESCRIPT_IMPLEMENTATION.md  jsconfig.json  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/components/: BackendStatusBanner.tsx  ErrorBoundary.tsx  ErrorLoggingProvider.tsx  F1Dashboard.tsx  F1Results.tsx  F1SimulationForm.tsx  Heatmap.tsx  HistoryTable.tsx  ReactQueryProvider.tsx  ResultCards.tsx  SimulationForm.tsx  StrategyDashboard.tsx  performance-chart.tsx  simulation-chart.tsx  simulation-form.tsx  simulation-results.tsx
frontend/components/legacy/: SimulationForm.tsx  StrategyDashboard.tsx  simulation-form.tsx  simulation-results.tsx
frontend/components/ui/: toast.tsx  toaster.tsx
frontend/e2e/: README.md  backend-status.spec.ts  dashboard.spec.ts  heatmap.spec.ts  simulation.spec.ts  test-utils.ts
frontend/lib/: api-validation-test.ts  api.ts  error-logging.ts  f1-api.ts  f1-hooks.ts  hooks.ts
frontend/styles/: f1-theme.css
frontend/types/: simulation.ts
memory-bank/: activeContext.md  progress.md  projectbrief.md
notebooks/: 03_calibration_gap_sweep.py  04_backtest_real_races.py  analysis_example.ipynb
scripts/: docker-dev.ps1  docker-dev.sh  openapi_export.py  test-bulletproof-simple.ps1  test-bulletproof.ps1  test-bulletproof.sh  validate-docker.ps1  validate-docker.sh
