[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "C", "I", "N", "B", "A", "S", "T", "D", "UP", "PL", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D"]  # Allow assertions and skip docstrings in tests

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real services"
]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--maxfail=1",
    "--disable-warnings",
    "--strict-markers",
    "--strict-config"
]

[project]
name = "f1-undercut-sim"
version = "0.1.0"
description = "F1 undercut simulation analysis tool"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Favour Adesiyan", email = "favour@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<0.117.0",
    "uvicorn[standard]>=0.24.0,<0.36.0",
    "pandas>=2.1.0,<2.3.0",
    "numpy>=1.24.0,<2.1.0",
    "scipy>=1.11.0,<1.15.0",
    "httpx>=0.25.0,<0.28.0",
    "requests>=2.31.0,<2.33.0",
    "python-multipart>=0.0.6,<0.1.0",
    "pydantic>=2.4.0,<2.12.0",
    "pyarrow>=14.0.0,<18.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.4.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.11.0,<3.13.0",
    "freezegun>=1.2.0,<1.6.0",
]
dev = [
    "pytest>=7.4.0,<8.4.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.11.0,<3.13.0",
    "freezegun>=1.2.0,<1.6.0",
    "ruff>=0.1.0,<0.8.0",
    "black>=23.0.0,<25.0.0",
    "pre-commit>=3.4.0,<4.0.0",
    "mypy>=1.6.0,<1.8.0",
    "safety>=2.3.0,<4.0.0",
    "bandit>=1.7.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/Favour01216/f1-undercut-sim"
Repository = "https://github.com/Favour01216/f1-undercut-sim"
Issues = "https://github.com/Favour01216/f1-undercut-sim/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true